--- a/config/config.json
+++ b/config/config.json
@@ -3,5 +3,8 @@
     "database": "favorite_movie_development",
     "host": "127.0.0.1",
     "dialect": "postgres"
+  },
+  "production": {
+    "use_env_variable": "DATABASE_URL"
   }
 }
